style.css
body {

    display: flex;
    flex-direction: column;
    margin: 0;
   
}


.section1 {

    display: flex; 
    flex: 1;
    flex-direction: column;
    padding: 20px;
    background-color: #1f2937;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}
.header {

    display: flex;
    height: 72px;
  background: #1f2937;
  


  padding: 50px;
  flex: 1;
 
  

  
}


.logo {

  color: #f9faf8;
font-size: 24px;
font-weight: 900;
margin-right: auto;
}


.header-links {

    color: #e5e7eb;
    margin-left: auto;
  
    
}

li {
   list-style-type: none;
   display: flex;
   justify-content: center;
gap: 24px;



}    
    

ul {
    margin: 0;
    padding: 0;
}




.hero-main {

    font-size: 48px;
    font-weight: bold;
    color: #f9faf8;
}

.hero-sub {

    font-size: 18px;
    color: #e5e7eb
}

.section1 .body-left{


    max-width: 350px;

}

.section1 .empty {
    display: flex;
    justify-content: center;
    height: 250px;
    width: 40%;
    background-color: gray;
    color: white;
    text-align: center;
    align-items: center;



}

.body1 {

    display: flex;
    padding: 40px;
    align-items: center;
    justify-content: center;
    gap: 10%;
}

.section2 {

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-content: center;
    flex: 1;
}

.header2 {

    display: flex;
    justify-content: center;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-size: 36px;
    font-weight: bolder;
    color: #1f2937;
    padding-top: 48px;
}

.square-container {
    justify-content: center;
    display: flex;
    padding: 50px;
    gap: 20px;
    flex-wrap: wrap;


}


.box2 {
  
    width: 125px;
    height: 125px;
    border: 5px solid #2e64bb;
    padding: 8px;
    border-radius: 7%;

    
    

    
}

.text {
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    color: rgba(43, 41, 41, 0.898); 
    text-align: center;
}


.b1, .b2, .b3, .b4 {

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 10px;
    flex-wrap: wrap;
    flex: 1;
    max-width: 175px;
    padding: 20px;
}


.section3 {
    display: flex;
    background: rgb(202, 202, 202);
    justify-content: center;
    height: 40%;


}

.box3 {

    display: flex;
    flex: 1;
}

